--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "ejs": "^2.7.4",
     "errorhandler": "^1.5.1",
     "express": "^4.17.1",
+    "express-session": "^1.17.0",
     "fs-extra": "^8.1.0",
     "hbs": "^4.0.6",
     "mongodb": "^3.3.4",
     "mongoose": "^5.7.12",
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "pg": "^7.12.1"
   },
   "devDependencies": {
